# taqc-dataset-lib

./: Pipfile  README.md  __init__.py  pyproject.toml  setup.py
src/taqc/dataset/: __init__.py  common.py  rect.py  sample.py
src/taqc_dataset_lib/dataset/: __init__.py
tests/: test_common.py  test_rect.py  test_sample.py
