[project]
name = "taqc-dataset-lib"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Day Tripper", email = "kekovdom@gmail.com"},
]
dependencies = [
    "expression>=1.2.0",
    "more-itertools>=10.2.0",
    "pillow>=10.3.0",
    "pytest>=8.1.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pdm]
distribution = true
